--- a/.github/workflows/ci-maven-deploy.yaml
+++ b/.github/workflows/ci-maven-deploy.yaml
@@ -88,7 +88,7 @@ jobs:
                 }
               }
             ]
-          pluginRepositories: |
+          plugin_repositories: |
             [
               {
                 "id": "central",
