--- a/.github/workflows/ci-maven-deploy.yaml
+++ b/.github/workflows/ci-maven-deploy.yaml
@@ -134,7 +134,9 @@ jobs:
 
       - name: unitTest
         if: contains( github.ref_name, 'develop' )
-        run: mvn -Dmaven.repo.local=.m2 clean test
+        run: |
+          cat /github/home/.m2/settings.xml
+          mvn -s /github/home/.m2/settings.xml -gs /github/home/.m2/settings.xml -Dmaven.repo.local=.m2 clean test
         # env:
         #   MAVEN_USERNAME: ${{ secrets.PAYZAVE_NEXUS_USER }}
         #   MAVEN_CENTRAL_TOKEN: ${{ secrets.PAYZAVE_NEXUS_PASSWORD }}
