--- a/.github/workflows/ci-maven-deploy.yaml
+++ b/.github/workflows/ci-maven-deploy.yaml
@@ -122,11 +122,11 @@ jobs:
           mvn -gs /github/home/.m2/settings.xml -Dmaven.repo.local=.m2 clean test
 
       - name: prepareRelease
-        if: github.ref_name == 'master' && github.event_name == 'push' && (contains(github.event.head_commit.message, 'maven-release-plugin'))
+        if: github.ref_name == 'master' && !(contains(github.event.head_commit.message, 'maven-release-plugin'))
         run: |
           mvn -gs /github/home/.m2/settings.xml -B -Dmaven.repo.local=.m2 -DskipTests clean release:prepare
 
       - name: deployArtifact
-        if: contains( github.ref_name, 'dev' ) || github.event_name == 'push' && !(contains(github.event.head_commit.message, ''))
+        if: contains( github.ref_name, 'dev' ) || !(contains(github.event.head_commit.message, ''))
         run: |
           mvn -gs /github/home/.m2/settings.xml -Dmaven.repo.local=.m2 -DskipTests clean deploy
