--- a/.github/workflows/ci-backend-build.yaml
+++ b/.github/workflows/ci-backend-build.yaml
@@ -5,7 +5,7 @@ jobs:
   BuildAndRelease:
     # runs-on: ubuntu-latest
     # runs-on: [self-hosted, payzave]
-    runs-on: [self-hosted, b2p]
+    runs-on: gha-runner-scale-set
     # container: openjdk:17-jdk-alpine3.14
     container: adoptopenjdk/openjdk11:jdk-11.0.11_9-alpine
     # container: openjdk:18-jdk-alpine3.15
