--- a/.github/workflows/ci-backend-test.yaml
+++ b/.github/workflows/ci-backend-test.yaml
@@ -5,7 +5,7 @@ jobs:
   Test:
     # runs-on: ubuntu-latest
     # container: openjdk:17-jdk-alpine3.14
-    runs-on: [self-hosted, b2p]
+    runs-on: gha-runner-scale-set
     container: adoptopenjdk/openjdk11:jdk-11.0.11_9-alpine
     # container: openjdk:18-jdk-alpine3.15
     # container: openjdk:15-jdk-alpine3.12
