--- a/.github/workflows/ci-flyway-release.yaml
+++ b/.github/workflows/ci-flyway-release.yaml
@@ -5,7 +5,7 @@ jobs:
   FlywayRelease:
     # runs-on: ubuntu-latest
     # runs-on: [self-hosted, payzave]
-    runs-on: [self-hosted, b2p]
+    runs-on: gha-runner-scale-set
     # container: openjdk:17-jdk-alpine3.14
     # container: gcr.io/k8s-skaffold/skaffold:v1.18.0
     container: adoptopenjdk/openjdk11:jdk-11.0.11_9-alpine
