--- a/.github/workflows/ci-frontend-build.yaml
+++ b/.github/workflows/ci-frontend-build.yaml
@@ -4,7 +4,7 @@ on:
 jobs:
   BuildAndRelease:
     # runs-on: ubuntu-latest
-    runs-on: [self-hosted, b2p]
+    runs-on: gha-runner-scale-set
     container: node:14.18.3-alpine3.15
     steps:
       - name: AddAPK
