--- a/.github/workflows/ci-maven-deploy.yaml
+++ b/.github/workflows/ci-maven-deploy.yaml
@@ -3,7 +3,8 @@ on:
   workflow_call:
 jobs:
   MavenDeploy:
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
+    runs-on: gha-runner-scale-set
     # runs-on: [self-hosted, payzave]
     # runs-on: [self-hosted, b2p]
     # container: openjdk:17-jdk-alpine3.14
